# telegram-package

./: .pylintrc  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  setup.py 
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: pr.yaml  release.yaml  tests.yml
src/: telegram.py
telegram/: __init__.py  constants.py  exceptions.py  telegram.py
tests/: conftest.py  test_create_inline_markup.py
tests/configs/: messages.json
tests/vault/: policy.hcl
