[tool.poetry]
name = "telegram"
version = "1.2.0"
description = "This is an additional implementation compared to the telebot module. This module is designed for quick initialization, authorization and rendering of various buttons/widgets for telegram bots."
authors = ["Bervinov Oleg <obervinov@pm.me>"]
maintainers = ["Bervinov Oleg <obervinov@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram"}]
homepage = "https://github.com/obervinov/telegram-package"
repository = "https://github.com/obervinov/telegram-package"
documentation = "https://github.com/obervinov/telegram-package/blob/main/README.md"
keywords = ["telegram", "bot", "telebot", "telegram-bot"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/telegram-package/issues"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.12.0"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v1.0.4" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v2.0.2" }
messages = { git = "https://github.com/obervinov/messages-package.git", tag = "v1.0.2" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
