[tool.poetry]
name = "telegram"
version = "3.0.0"
description = "This is an additional implementation compared to the telebot module. This module is designed for quick initialization, authorization and rendering of various buttons/widgets for telegram bots."
authors = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
maintainers = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram"}]
homepage = "https://github.com/obervinov/telegram-package"
repository = "https://github.com/obervinov/telegram-package"
documentation = "https://github.com/obervinov/telegram-package/blob/main/README.md"
keywords = ["telegram", "bot", "telebot", "telegram-bot"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/telegram-package/issues"

[tool.poetry.dependencies]
python = "^3.12"
pyTelegramBotAPI = "^4"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v2.0.0" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v4.0.0" }
messages = { git = "https://github.com/obervinov/messages-package.git", tag = "v2.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
