[tool.poetry]
name = "telegram"
version = "3.0.4"
description = "This module is designed to quickly initialize, authorize, and display various buttons/widgets for my telegram bots."
authors = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
maintainers = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram"}]
homepage = "https://github.com/obervinov/telegram-package"
repository = "https://github.com/obervinov/telegram-package"
documentation = "https://github.com/obervinov/telegram-package/blob/main/README.md"
keywords = ["telegram", "bot", "telebot", "telegram-bot"]
include = ["CHANGELOG.md"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/telegram-package/issues"

[tool.poetry.dependencies]
python = "^3.12"
pyTelegramBotAPI = "^4"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v2.0.4" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v4.0.3" }
messages = { git = "https://github.com/obervinov/messages-package.git", tag = "v2.0.2" }

[tool.poetry.group.dev.dependencies]
pylint = "^4"
flake8 = "^7"
pytest = "^9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
